[package]
name = "see_the_heat"
authors = [ "software9119.technology" ]
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
microbit-v2 = "0.12.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"], optional = true }

[profile.release]
opt-level=0
lto="off"
panic="abort"
codegen-units=1
strip="symbols"

[features]
panic_halt = []
panic_abort = []
test = [ "panic_halt", "rtt-target" ]
run = [ "panic_abort" ]
